app/assets/stylesheets/govuk-frontend/extensions.scss
@use "sass:map";

// Custom colours for our destructive link
// Based on the error colour in:
// https://github.com/alphagov/govuk-frontend/blob/v4.2.0/src/govuk/settings/_colours-applied.scss
// with :hover and :active variants based on those for links
$govuk-destructive-link-colour: $govuk-error-colour;
$govuk-destructive-link-hover-colour: #990a00;
$govuk-destructive-link-active-colour: $govuk-text-colour;

// Gives access to the Sass variables used in the GOVUK Frontend typographic styles
// See: https://frontend.design-system.service.gov.uk/sass-api-reference/#govuk-typography-scale
@function get-govuk-typography-style($size, $breakpoint, $property) {
  $size-map: map-get($govuk-typography-scale, $size);
  $breakpoint-map: map-get($size-map, $breakpoint);

  @if not map-has-key($breakpoint-map, $property) {
    @error "Unknown property #{$property} - expected a property from the typography scale for #{$size}.";
  }

  @return map-get($breakpoint-map, $property);
}

// Extends footer column styles to allow 4 columns
@include mq ($from: desktop) {
  .govuk-footer__list--columns-4 {
    // TODO: Move support for legacy properties to something like Post-CSS's auto-prefixer
    -webkit-column-count: 4;
    -moz-column-count: 4;
    column-count: 4;
  }
}

// Extends govuk-link to create a class of link that causes a destructive action
// Based on styles of link in:
// https://github.com/alphagov/govuk-frontend/blob/v4.2.0/src/govuk/helpers/_links.scss
//
// Note: all destructive actions must have a confirmation step these links navigate to
@mixin govuk-link-style-destructive-no-visited-state {
  &:link,
  &:visited {
    color: $govuk-destructive-link-colour;
  }

  &:hover {
    color: $govuk-destructive-link-hover-colour;
  }

  // When focussed, the text colour needs to be darker to ensure that colour
  // contrast is still acceptable against the focus colour
  // Activated links are usually focused so this applies to them as well
  &:active,
  &:focus {
    color: $govuk-destructive-link-active-colour;
  }
}

.govuk-link--destructive {
  @include govuk-link-style-destructive-no-visited-state;
}

// GOVUK Frontend's grid-column classes are built from the $govuk-grid-widths map
// that means we can extend the map to get extra classes
$notify-grid-widths: (
  one-eighth: 12.5%,
  one-sixth: 16.6666%,
  five-eighths: 62.5%,
  five-sixths: 83.3333%,
  seven-eighths: 87.5%
);

$govuk-grid-widths: map.merge($govuk-grid-widths, $notify-grid-widths);

.govuk-input--width-6 {
  max-width: 14ex;
}

// extensions to govuk-input to allow numbering by label
.govuk-input--numbered {
  padding-left: 1.84em;

  @include govuk-media-query(desktop) {
    display: inline-block;
  }
}

.govuk-input--numbered__label {
  float: left;
  width: 1.6em;
  margin: 8px -1.6em 0 0;
  position: relative;
  left: 10px;
  color: $govuk-secondary-text-colour;
  font-weight: bold;
  pointer-events: none;
}

.govuk-input--numbered__label--error {
  position: absolute;
  bottom: 10px;

  @include govuk-media-query(desktop) {
    bottom: 7px;
  }
}

// Extensions to the GOVUK Frontend summary-list component, to apply to all
// summary-lists on Notify
.notify-summary-list {

  border-top: 1px solid $govuk-border-colour;
  padding-top: govuk-spacing(3);

  @include govuk-media-query($from: tablet) {
    padding-top: 0;
  }

}

.notify-summary-list__key {

  @include govuk-media-query($from: tablet) {
    font-weight: normal;
    padding-top: govuk-spacing(3);
    padding-bottom: govuk-spacing(2) + 1px;
    width: 33%;
  }

}

// carrying over from
// https://github.com/alphagov/notifications-admin/pull/2931
.notify-summary-list__key--35-100 {

  @include govuk-media-query($from: tablet) {
    width: 35%;
  }

}

.govuk-summary-list__value--default {
  color: $govuk-secondary-text-colour;
}

.govuk-summary-list__value--truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.notify-hint--paragraph {
  color: $govuk-text-colour;
  padding-top: govuk-spacing(3);
  margin-bottom: govuk-spacing(6);
}


// enhanced govuk-textarea with highlight
.govuk-textarea-highlight {
  &__wrapper {
    position: relative;
  }

  &__textbox {
    resize: none;
    z-index: 20;
    background: none;
    position: relative;
    // govuk-textarea has a default bottom margin of 15px
    margin-bottom: 0;
    padding: 4px;
  }

  &__background {
    position: absolute;
    top: 0;
    left: 0;
    pointer-events: none;
    color: transparent;
    white-space: pre-wrap;
    overflow-wrap: break-word;
    word-wrap: break-word;
    padding: 4px;
    border: 2px solid transparent;
    padding-bottom: govuk-spacing(3);
    z-index: 10;
    // match govuk-textarea line height
    line-height: 1.25;

    // transparent borders become visible in high contrast modes so set to match background
    @media (-ms-high-contrast: active), (forced-colors: active) {
      border-color: Canvas;
    }

    .placeholder,
    .placeholder-conditional {
      color: transparent;
    }
  }
}

// colour preview widget adjecent to govuk-input field
.govuk-input__colour-preview {
  @include govuk-media-query($from: desktop) {
    width: 38px;
    height: 38px;
    margin-left: 5px;
    border-radius: 50%;
    box-shadow: inset 0 0 0 1px rgba(govuk-colour("black"), 0.2);
    display: inline-block;
    vertical-align: top;
    transition: background 0.3s ease-out;
  }
}

